--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "simple-react-lightbox": "^3.6.6",
+    "simplelightbox": "^2.8.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
