--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-image-lightbox": "^5.1.4",
     "react-scripts": "4.0.3",
     "simple-react-lightbox": "^3.6.6",
     "simplelightbox": "^2.8.0",
