--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://prgrmmrthz.github.io",
-  "name": "portfolio-react",
+  "name": "vicwilton-portfolio-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
